*Empty MediaWiki Message*

--- a/Потманя_(Пейкужо_буе).mw
+++ b/Потманя_(Пейкужо_буе).mw
@@ -68,7 +68,7 @@
 {{Lang-mdf|потма}}, {{Lang-ru|«нутро; сердцевина; полость», в топонимии – глубокое место в лесу, глубинка. Жители села освобождались от податей за то, что они оказывали служилым людям помощь в охране юго-восточной границы Российского государства (на участке Керенской засечной черты)}}<ref name="Память, запечатленная в слове"/>.
 
 == Содавикс ломанть те велестэнть ==
-* М.Н. Шишкарёв— генерал-майора
+* М.Н. Шишкарёв<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref>— генерал-майор
 * А.Г. Самошкин —  фольклоронь пурныця 
 * [[Самошкин Семен Аверьянович|Семён Самошкин]]<ref name="Библиотека_Самошкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=2  Библиотека Мордовской литературы. Самошкин Семен Аверьянович] {{ref-ru}}</ref> — сёрмадей, ютавтыця 
 * А.А. Андреев — орденоносец 
