--- a/Береговые_Сыреси_(Ицял_буе).mw
+++ b/Береговые_Сыреси_(Ицял_буе).mw
@@ -62,7 +62,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Береговые Сыреси велесэ чачсь:
-* [[Турунов, Иван Евграфович|Иван Турунов]]<ref name="Герои Страны_Гангаев">[http://www.warheroes.ru/hero/hero.asp?Hero_id=2668 Герои Страны. Гангаев Алексей Кузьмич] {{ref-ru}}</ref><ref name="Кшнякин Е. Н ">[http://www.rusnauka.com/10_DN_2014/Istoria/1_164565.doc.htm Кшнякин Е. Н УРОЖЕНЦЫ МОРДОВИИ – ГЕРОИ СОВЕТСКОГО СОЮЗА – УЧАСТНИКИ ФОРСИРОВАНИЯ ДНЕПРА] {{ref-ru}}</ref> — генерал-майор
+* [[Турунов, Иван Евграфович|Иван Турунов]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
 
 
 == Лисьм.: ==
