*Empty MediaWiki Message*

--- a/Пичале_(Тумобуе).mw
+++ b/Пичале_(Тумобуе).mw
@@ -75,7 +75,7 @@
 Пичале велесэ чачсть:
 *  [[Жадейкин, Максим Степанович|Максим Жадейкин]]<ref name="Новости Мордовии и Саранска">[http://113rus.ru/news/13336 Новости Мордовии и Саранска, Пуркаевцы открыли секрет «мордовской тайги»] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 *  [[Пуркаевень, Максим Алексеевич|Максим Пуркаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — армиянь генерал
-*  [[Сияков, Сергей Семенович|Сергей Сияков]]<ref name="Костанайский ОСВ">[http://veteran.kostanai.kz/rus/kniga_pamjati.html/letter/С/page/116 Костанайский областной Совет ветеранов. Ветераны Костонайской области] {{ref-ru}}</ref> — 
+*  [[Сияков, Сергей Семенович|Сергей Сияков]]<ref name="Костанайский ОСВ">[http://veteran.kostanai.kz/rus/kniga_pamjati.html/letter/С/page/116 Костанайский областной Совет ветеранов. Ветераны Костонайской области] {{ref-ru}}</ref> — Ине ойнань улиця
 ==Веленть эрямозо==
 [[1966 ие]]нь [[медьковонь 11 чи]]стэ веленть лемесь кармась '''Пуркаево<ref name="РГО_с. Пуркаево"/>'''. Велесэ улить 6<ref name="РГО_с. Пуркаево"/> артезианонь лисьмат.
 == Лисьм.: ==
