--- a/Кяшал_(Атюрьбуе).mw
+++ b/Кяшал_(Атюрьбуе).mw
@@ -39,7 +39,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  522<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               =  522<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,9 +58,23 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Кяшал'''  ({{lang-ru|с. Кишалы}}) — те мокшонь веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
+'''Кяшал<ref name="РГО_с. Кишалы">[http://geo13.ru/reestr/object/262 Геопортал РГО в Республике Мордовия: с. Кишалы] {{Ref-ru}}</ref>''', лиякс: '''Кешал, Кишал<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>'''  ({{lang-ru|с. Кишалы}}) — те мокшонь<ref name="РГО_с. Кишалы"/> веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
-== Сёрм.: ==
+Ашти [[Яваз лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Кишалы – веле 149 кардазт-кудот марто Чополтонь уездсэ''.}}
+{{oq|ru|В «СНМ Тамбовской губернии» (1866) – Кишалы, село из 149 дворов  Темниковского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 637 лом., [[2010 ие]]нь ловномасонть —522 лом.
+== Веленть лемденть  ==
+Лемесь-термин:<ref name="Память, запечатленная в слове"/> ({{Lang-mdf|кяше}} {{Lang-ru|«деготь»}}) + ''-лы'' топоформантось.  
+== Содавикс ломанть те велестэнть ==
+Кяшал велесэ чачсть:
+*  [[Малькин, Александр Степанович|Александр Малькин]]<ref name="Библиотека_Малькин">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=1 Библиотека Мордовской литературы. Малькин Александр Степанович] {{ref-ru}}</ref>— мокшонь сёрмадей
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
