--- a/Вежга_(Теньгушбуе).mw
+++ b/Вежга_(Теньгушбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 28<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 28<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,15 +58,20 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Вежга  (смустьтне)}}
+'''Вежга<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|п. Вяжга}}) — эрзянь<ref name="РГО_п. Вяжга">[http://geo13.ru/reestr/object/1330 Геопортал РГО в Республике Мордовия: п. Вяжга] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Теньгушбуе]]сэ.
 
-'''Вежга''' ({{Lang-ru|п. Вяжга}}) — эрзянь веле [[Мордовия]]со [[Теньгушбуе]]сэ.
+Ашти [[Вяжга лей]] лангсо. Кода лецтяви<ref name="РГО_п. Вяжга"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1866 ие]]) ''Вяжга велесь ульнесь стявтозь-путозь ХХ пингень 20-це иетнесэ сазь тей эрямо [[Нородвеле (Теньгушбуе)|Нородвелестэ]]. 1 вайгепель веленть эйстэ ашти [[Шелубей эрьке]]сь''.}}
+{{oq|ru|Основан в начале 20-х годов ХХ века переселенцами из села Нароватово. В "Грамоте Кадомскому воеводе Юрию Савельевичу Скрыпицину об отписке рыбных ловель " других угодий у окольничего И. С. Хитрово и Я. С. Вышеславцева и отдаче их на оброк новокрещенам деревень Нороватовой, Станоровой и Дракиной Афоньке Яковлеву с товарыщи" в 1689 году сообщалось о местонахождении гидроним а- "Сенные покосы по обе стороиы Мокши реки, усть речки Вежги, а речка де Вежга впала в озеро Шадыбей."}}
+{{Цитатань пе}}
 
-
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 36 лом., [[2010 ие]]нь ловномасонть —28 лом.
 == Веленть лемденть  ==
-
+Лемесь-гидроним<ref name="Память, запечатленная в слове"/>.  
 
 ==Содавикс ломанть те велестэнть==
-
+* [[Маскаев, Андрей Иванович|Андрей Маскаев]]<ref name="Библиотека_Маскаев">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=3 Библиотека Мордовской литературы. Маскаев Андрей Иванович] {{ref-ru}}</ref>— эрзянь сёрмадей
 
 
 
