--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -68,6 +68,7 @@
 == Содавикс ломанть тестэнь ==
 Саран ошсо чачсть:
 *  [[Мухин, Владимир Михайлович|Владимир Мухин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
+*  [[Суняйкин, Виктор Тихонович|Виктор Суняйкин]]<ref name="МРОКМ им. И.Д. Воронина_К 65-летию мастера">[http://www.mrkm.ru/news/?id=392 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 65-летию мастера] {{ref-ru}}</ref> — чувтосто керсиця
 ==Веленть эрямозо==
 
 == Лисьм.: ==
