*Empty MediaWiki Message*

--- a/Сире_Шайгав_(Ташто_Шайгабуе).mw
+++ b/Сире_Шайгав_(Ташто_Шайгабуе).mw
@@ -71,7 +71,7 @@
 == Содавикс ломанть те велестэнть ==
 Сире Шайгав велесэ чачсть:
 * [[Налдин, Василий Савельевич|В.С. Налдин]] —  ({{Lang-ru| полный кавалер ордена Славы}}) 
-* С.С. Шишканов — советэнь-партиЯнь важожиця
+*[[Шишканов, Степан Сергеевич|С.С. Шишканов]]<ref name="МРОКМ им. И.Д. Воронина_Степан Сергеевич Шишканов">[http://www.mrkm.ru/news/?id=424  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Степан Сергеевич Шишканов ( 26.12.1897 – 1.5.1962 )] {{ref-ru}}</ref> — советэнь-партиянь важожиця
 * М.В. Дорожкин, Т. В. Попков  —  историкть 
 * С.Н. Анисимов — шумбрачинь-медицинань полковник  
 * Е.Д. Гришин — ({{Lang-ru|заместителя главы Пролетарского района г. Саранска}})  
@@ -85,7 +85,7 @@
 == Веленть эрямозо  ==
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове"/>: ''Акшувонь ки'', ''Акшу ланга'', ''Анисимонь кура'', ''Анисимонь седняц'', ''Баба эшиня'', ''Бедань седня'', ''Ванькаснонь эшинясь'', ''Ведень прама'', ''Вельняй шяй'', ''Винань тиема ляйбря'', ''Вяльтерьмень ал'', ''Вяльтерьмень ала эшиня'', ''Гадечень паксяц'', ''Дубовая яма'',  ''Завод шамань эшиня'', ''Инеж лотка'', ''Инеж лотконь ешиня'', ''Калма куронь ки'', ''Каргашка'', ''Кичкор шяй'', ''Крёсляйбря'', ''Кувака лотка'', ''Кукать седняц'', ''Лашма'', ''Ленокть ляейбряц'', ''Лесничествань седня'', ''Лёвань ляйбряц'', ''Мази сёнга шама'', ''Мазы илинят'', ''Мазы седь китькс'', ''Марлю киня'', ''Марлю эшеня'', ''Модаю киня'', ''Модаю шамась'', ''Нищаень кинга'', ''Од курнянь ки'', ''Оцю киланга вирь'', ''Оцю седь'', ''Перяфтуманал шама'', ''Рузонь шавома седня'', ''Саразонь шяй'', ''Сарайляйбря'', ''Сарай эшиня'', ''Саранскеинь ки'',  ''Cяли куронь кись'', ''Теризморгань межасна'', ''Тимошкинонь меленцясь'', ''Уня шяй китькс'', ''Урань шяй'', курот: ''Ала курня'', ''Вярде пе'', ''Калма кура'', ''Лягушевка'', ''Маци курня'', ''Огибаловка'', ''Пекарня курня'', ''Сери край'', ''Сире веле'', ''Центральная''; ''Церькав площадь'', ''Цюкор шама'', ''Шяйгавонь ки'', ''Янгатень киня'', ''Яшать ляйбряц'', ''Яшать фтал вирец'', ''Яшина шама''.
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
