--- a/Целпанова_(Отяжбуе).mw
+++ b/Целпанова_(Отяжбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 335
+  |эрицятне               = 335<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,8 +58,15 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Целпанова''' ({{Lang-ru|Челпаново}}) — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Целпанова''' ({{Lang-ru|Челпаново}}) — эрзянь<ref name="МРОКМ им. И.Д. Воронина_Не вернулся из боя">[http://www.mrkm.ru/news/?id=393  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». «Не вернулся из боя …»] {{ref-ru}}</ref> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+==Содавикс ломанть те велестэнть==
+* [[Пугачев, Арсений Филиппович|Арсений Пугачев]]<ref name="МРОКМ им. И.Д. Воронина_Не вернулся из боя"/> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+
+== Лисьм.: ==
+<references />
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
 [[Category:Отяжбуень велеть]]
+[[Category:Эрзянь велеть]]
