*Empty MediaWiki Message*

--- a/Вежга_(Теньгушбуе).mw
+++ b/Вежга_(Теньгушбуе).mw
@@ -71,11 +71,9 @@
 Лемесь-гидроним<ref name="Память, запечатленная в слове"/>.  
 
 ==Содавикс ломанть те велестэнть==
-* [[Маскаев, Андрей Иванович|Андрей Маскаев]]<ref name="Библиотека_Маскаев">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=3 Библиотека Мордовской литературы. Маскаев Андрей Иванович] {{ref-ru}}</ref>— эрзянь сёрмадей
+* [[Маскаев, Андрей Иванович|Андрей Маскаев]]<ref name="Библиотека_Маскаев">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=3 Библиотека Мордовской литературы. Маскаев Андрей Иванович] {{ref-ru}}</ref><ref name="МГУ_Маскаев">[http://www.mrsu.ru/ru/80let/scimen/index.php?ID=11583 Мордовский Государственный Университет им. Н.П. Огарева. Маскаев Андрей Иванович] {{ref-ru}}</ref><ref name="Государственная">[http://minzdrav.e-mordovia.ru/news/view/25309  Государственная власть РМ. ФОЛЬКЛОРИСТ ИЗ МОРДОВИИ (к 40-летию со дня смерти Андрея Ивановича Маскаева) ] {{ref-ru}}</ref>— эрзянь сёрмадей, фольклоронь пурныця, профессор
 
-
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
