--- a/Левож_(Оразайбуе).mw
+++ b/Левож_(Оразайбуе).mw
@@ -74,6 +74,7 @@
 == Содавикс ломанть те велестэнть ==
 Левож велесэ чачсть:
 * [[Учватов, Николай Иванович|Николай Учватов]]<ref name="Библиотека_Учватов">[http://www.lib.e-mordovia.ru/Library/?Char=%D3&id=0  Библиотека Мордовской литературы. Учватов Николай Иванович] {{ref-ru}}</ref>—  мокшонь валморозей, сёрмадей
+* [[Учватов, Павел Иванович|Павел Учватов]]<ref name="МРОКМ им. И.Д. Воронина_Мастер сцены">[http://www.mrkm.ru/news/?id=497  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Мастер сцены] {{ref-ru}}</ref> — актёр
 * [[Антонова, Мария Николаевна|Мария Антонова]]<ref name="Музыкальная энциклопедия">[http://enc-dic.com/enc_music/Antonova-M-N-397.html Музыкальная энциклопедия: Антонова М. Н.] {{ref-ru}}</ref>—  мокшонь морыця
 ==Веленть эрямозо==
 
