/* Самара ёнксонь содавикс эрзятне «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ{{Ref-myv}} */

--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -92,6 +92,7 @@ MSKS=+1|
 #  [[Втулкин, Михаил Алексеевич|Втулкин Михаил Алексеевич]] (1929 - 1991). Эрзянь сёрмадыця, валморозей, прозаик, куляньсёрмадей.
 #  [[Журавлёвонь, Числав Григорьевич|Журавлёв Числав Григорьевич]] (1935). Эрзянь сёрмадыця, валморозей, Россиянь сёрмадеень вейсендявксов совиця.
 #  [[Кадышень, Надежда Никитична|Кадышева Надежда Никитична]] (1959). Морыця, Россиянь Заслуженной артистка (1993), Мордовия Республикань народной артистка (1995).
+#  [[Юшкин, Юлиан Иванович|Юлиан Юшкин]]<ref name="МРОКМ им. И.Д. Воронина_К 120-летию Ю.И. Юшкина">[http://www.mrkm.ru/news/?id=495  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 120-летию Ю.И. Юшкина] {{ref-ru}}</ref> (Трофимовка веле Бугурусланонь уезд, Самарань губерниясо). Врача-окулист, медецинань наукань кандидат, РСФСР-нь ды МАССР-нь заслуженной врач.
 
 == Лисьм.: ==
 <references />
