*Empty MediaWiki Message*

--- a/Саран_ош.mw
+++ b/Саран_ош.mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 299 195
+  |эрицятне               = 299 195<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2014
   |плотность              = 
   |агломерация            = 
@@ -61,12 +61,22 @@
 
 '''Саран ош''' (лиякс '''Саранск ош''', '''Саранской''') — те [[Мордовия Республикась|Мордовия Республиканть]] прявтошось.
 
-Ошось ашти [[Инесаро лей|Инесар]] [[Лей|леень]] керш чиресэ ([[Рав|Равонь]] пурнавкс-бассейнанть), 642 [[Вайгельпе|вп]]. [[Чилисема|чилисемаёнов]] [[Москов ош|Москов ошсто]]. Ульнесь юрозь рузонь ломаньтнесэ [[1641 ие]]стэ кода теремань нардечи, ошокс кармасть мереме 1651 иестэ. Течи Саран ошось — покш эрзянь ды мокшонь мазычинь-культурань куншка тарка.
+Ошось ашти [[Инесаро лей|Инесар]] [[Лей|леень]] керш чиресэ ([[Рав|Равонь]] пурнавкс-бассейнанть), 642 [[Вайгельпе|вп]]. [[Чилисема|чилисемаёнов]] [[Москов ош|Москов ошсто]]. Ульнесь юрозь рузонь ломаньтнесэ [[1641 ие]]стэ кода тюремань нардечи, ошокс кармасть мереме 1651 иестэ.  Ошонь чачома чизэ [[аштемковонь 12 чи]]стэ.
+
+Течи Саран ошось — покш эрзянь ды мокшонь мазычинь-культурань куншка тарка.
 
 Эрицятнеде 299,1 тёж. ([[2014 ие]]), покшолмазо 71,5 [[Вайгельпе|вп²]]
 
+{| class="wikitable"
+|-
+! Ие !! 1970  !! 1979 !! 1989  !! 2002 !! 2010
+|-
+| лом<ref name="Численность"/>. || 93634 ||129398 || 154158 || 148712 ||145097  
+|}
+
 == Содавикс ломанть тестэнь ==
 Саран ошсо чачсть:
+*  [[Маючая, Клавдия Яковлевна|Клавдия Маючая]]<ref name="МРОКМ им. И.Д. Воронина_Клавдия Яковлевна Маючая">[http://www.mrkm.ru/news/?id=481  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Клавдия Яковлевна Маючая] {{ref-ru}}</ref> — СССР-нь шожда атлетикань заслуженной мастер спорта
 *  [[Мухин, Владимир Михайлович|Владимир Мухин]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
 *  [[Суняйкин, Виктор Тихонович|Виктор Суняйкин]]<ref name="МРОКМ им. И.Д. Воронина_К 65-летию мастера">[http://www.mrkm.ru/news/?id=392 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 65-летию мастера] {{ref-ru}}</ref> — чувтосто керсиця
 *  [[Сущинский, Владимир Александрович|Владимир Сущинский]]<ref name="МРОКМ им. И.Д. Воронина_В.А. Сущинский">[http://www.mrkm.ru/news/?id=389 «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». В.А. Сущинский - фронтовой кинооператор] {{ref-ru}}</ref> — киноператор
