--- a/Теле.mw
+++ b/Теле.mw
@@ -1,3 +1,4 @@
+[[Артовкс:מסגד סיידנא מחמוד - אתרי מורשת בחיפה 2015 (14).JPG|кенжешка|Теле]]
 '''Те́ле''' — [[Ие|иенть]] шка вейке [[4 (ниле)|нилетьнестэ]], ашти [[Сёксь|сёксенть]] ды [[Тундо|тундонть]] ютксо.
 
 Телесь ашти [[3 (колмо)|3]] [[Ков|ковсто]]: пелевеёнксонь мастортнева - [[Ацамков|ацамковсто]], [[Якшамков|якшамковсто]] ды [[Даволков|даволковсто]], лембе ёнксонь мастортнева - [[Аштемков|аштемковсто]], [[Медьков|медьковсто]] ды [[Умарьков|умарьковсто]]. 
