*Empty MediaWiki Message*

--- a/Языкова_Пятина_(Инесаро_буе).mw
+++ b/Языкова_Пятина_(Инесаро_буе).mw
@@ -59,10 +59,14 @@
  |язык сайта              = 
 }}
 
-'''Языкова Пятина''' ({{Lang-ru|с. Языкова Пятина}})   — веле [[Мордовия]]со [[Инесаро буе]]сэ.
+'''Языкова Пятина''' ({{Lang-ru|с. Языкова Пятина}})   — рузонь веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+==Содавикс ломанть те велестэнть==
+* [[Федотов, Василий Михайлович|Василий Федотов]]<ref name="МРОКМ им. И.Д. Воронина_Краевед">[http://www.mrkm.ru/news/?id=470  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Краевед (к 90-летию со дня рождения В.М. Федотова)] {{ref-ru}}</ref> — краевед, историк, сёрмадей
+
+== Лисьм.: ==
 <references />
+
 
 [[Category:Мордовиянь велеть]]
 [[Category:Инесаро буень велеть]]
