*Empty MediaWiki Message*

--- a/Дюрькина_(Отяжбуе).mw
+++ b/Дюрькина_(Отяжбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Дюрькина''' ({{Lang-ru|Дюрки}}) — эрзянь веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+'''Дюрькина''' ({{Lang-ru|Дюрки}}) — эрзянь<ref name="МРОКМ им. И.Д. Воронина_Завоевание трудом"/> веле [[Отяжбуе]]сэ, [[Мордовия]]со.
 
 Трокс кужось ашти [[Покш Сарка лей|Покш Сарка леенть]] лангсо, 26 [[вайгельпе|вп]]  буенть куншка таркасто ды [[Отяжвеле (Отяжбуень)|Отяжвеле]] чугункань станциястонть.
 
@@ -68,7 +68,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Дюрькинасо чачсть:
-* Т.В. Гутрина, А.Т. Куняев — Социалистэнь Трудонь Геройть
+* [[Гутрина, Татьяна Васильевна|Татьяна Гутрина]]<ref name="МРОКМ им. И.Д. Воронина_Завоевание трудом">[http://www.mrkm.ru/news/?id=472  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Завоевание трудом] {{ref-ru}}</ref>, А.Т. Куняев — Социалистэнь Трудонь Геройть
 * М.Н. Агафонов — заслуженной агроном РСФСР
 * С.В. Кукин — заслуженной инженер велень хозяйствань РСФСР
 * Н.В. Орлов — Отяжбуень РК КПСС-нь секретаресь
@@ -76,7 +76,8 @@
 * А.М. Гребнева, А.А. Усанова (Куняева) — учёнойть
 
 Дюрькинань вакссо ули маар-калмазырь XII-XIV пингетнень (срубонь культура бронзань пингень).
-
+== Лисьм.: ==
+<references />
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть|Д]]
 [[Category:Отяжбуень велеть|Д]]
