--- a/Паранеи_(Отяжбуе).mw
+++ b/Паранеи_(Отяжбуе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 38
+  |эрицятне               = 38<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -59,6 +59,12 @@
  |язык сайта              = 
 }}
 '''Паранеи''' — веле [[Отяжбуе]]сэ, [[Мордовия]]со.
+
+==Содавикс ломанть те велестэнть==
+* [[Долганов, Александр Васильевич|Александр Долганов ]]<ref name="МРОКМ им. И.Д. Воронина_Сын земли">[http://www.mrkm.ru/news/?id=456  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Сын земли] {{ref-ru}}</ref> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
+
+== Лисьм.: ==
+<references />
 
 {{ЛопаПарцун:Отяжбуень вельтне}}
 [[Category:Мордовиянь велеть]]
