--- a/Ускляй_(Оразайбуе).mw
+++ b/Ускляй_(Оразайбуе).mw
@@ -74,7 +74,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Ускляй велесэ чачсь:
-* [[Соболевский, Александр Александрович|Соболевский Александр]]<ref name="Библиотека_Самородов">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=0  Библиотека Мордовской литературы. Самородов Кирилл Тимофеевич] {{ref-ru}}</ref>—  мокшонь сёрмадей, келень-содый.
+* [[Соболевский, Александр Александрович|Соболевский Александр]]<ref name="Библиотека_Самородов">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=0  Библиотека Мордовской литературы. Самородов Кирилл Тимофеевич] {{ref-ru}}</ref><ref name="МРОКМ им. И.Д. Воронина_К юбилею А.А. Соболевского">[http://www.mrkm.ru/news/?id=455  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К юбилею А.А. Соболевского] {{ref-ru}}</ref>—  мокшонь сёрмадей, келень-содый.
 ==Веленть эрямозо==
 
 == Лисьм.: ==
