--- a/Сумгин,_Михаил_Иванович.mw
+++ b/Сумгин,_Михаил_Иванович.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Сумгин Михаил Иванович''' ([[1873 ие]]нь [[даволковонь 24 чи]]стэ [[Ало куро (Лугаян буе)|Ало куро велесэ]], [[Лугаян буе]]нь, [[Алоошонь ёнкс]]о —  [[1942 ие]] [[ацамковонь 8 чи]]стэ [[Ташкент ош]]со) — содавикс советэнь учёной, доктор геологиянь наук, васенце кие путызе модань кельмемадо тонавтнеманть.
+'''Сумгин Михаил Иванович''' ([[1873 ие]]нь [[даволковонь 24 чи]]стэ [[Ало куро (Лугаян буе)|Ало куро велесэ]]<ref name="МРОКМ им. И.Д. Воронина_Сумгин Михаил Иванович"/>, [[Лугаян буе]]нь, [[Алоошонь ёнкс]]о —  [[1942 ие]] [[ацамковонь 8 чи]]стэ [[Ташкент ош]]со) — содавикс советэнь учёной, доктор геологиянь наук, васенце кие путызе модань кельмемадо тонавтнеманть. [[Эрзя]]<ref name="МРОКМ им. И.Д. Воронина_Сумгин Михаил Иванович">[http://www.mrkm.ru/news/?id=445  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Сумгин Михаил Иванович (24.2.1873 – 8.12.1942 г.)] {{ref-ru}}</ref>.
 
 Эстедензэ, сонсь Михаил Иванович, сёрмады конёвтнесэ, конат улить Наукань Академиясо:
 {{Цитатань ушодома}}«Чачинь мон даволковонь 12 чистэ (ташто стильсэ) 1873 иестэ. Лисян-улян видинь-сокицясто Алоошонь губерниясто Лугаянонь буестэ Покш-Маресевань ёнксто Ало куро велестэ (Ташто Пиченьгужосто). Раськень коряс мон — [[эрзя]]ян<ref>[http://lukped.narod.ru/internet/science/symgin.htm Знаменитые лукояновцы: Сумгин Михаил Иванович] {{ref-ru}}</ref>».
@@ -140,7 +140,7 @@
 # К вопросу о ледяных платинах на Крайнем Севере СССР. Гидротехн. Строит. 1938,р. 10,стр.34-35.
 # Строительство в условиях вечной мерзлоты. Вестник инженеров и техников,1938,р. 12,стр.757-758.
 
-== Сёрм. ==
+== Лисьм. ==
 * Составила список трудов М.И.Сумгина Ц.Я.Шапиро. М.1939 г./рукопись/ МРКМ ОФ 3355/273
 <references />
 
