--- a/Ало_куро_(Лугаян_буе).mw
+++ b/Ало_куро_(Лугаян_буе).mw
@@ -61,14 +61,14 @@
 |примечания              = <references/>
 }}
 {{Лия смустьтне|Ало (смустьтне)}}
-'''Ало куро''' ({{Lang-ru|Крапивка}}) - эрзянь веле [[Лугаян буе]]сэ [[Алоошонь ёнкс]]со.
+'''Ало куро''' ({{Lang-ru|Крапивка}}) — эрзянь веле [[Лугаян буе]]сэ [[Алоошонь ёнкс]]со.
 
 ==Содавикс ломанть те велестэнть==
 Ало куро велесэ чачсть:
-* [[Сумгин, Михаил Иванович|Михаил Сумгин]] — содавикс советэнь учёной, васенце кие путызе модань кельмемадо тонавтнеманть<ref>[http://www.lukped.narod.ru/internet/sumgin/index.html С.П.Качурин и В.К.Яновский Известия Академии Наук СССР, Серия Географическая номер 6, 1952. Михаил Иванович Сумгин] {{ref-ru}}</ref>. Эрзя<ref>[http://lukped.narod.ru/internet/science/symgin.htm Знаменитые лукояновцы: Сумгин Михаил Иванович] {{ref-ru}}</ref>.
+* [[Сумгин, Михаил Иванович|Михаил Сумгин]]<ref name="МРОКМ им. И.Д. Воронина_Сумгин Михаил Иванович">[http://www.mrkm.ru/news/?id=445  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Сумгин Михаил Иванович (24.2.1873 – 8.12.1942 г.)] {{ref-ru}}</ref> — содавикс советэнь учёной, васенце кие путызе модань кельмемадо тонавтнеманть<ref>[http://www.lukped.narod.ru/internet/sumgin/index.html С.П.Качурин и В.К.Яновский Известия Академии Наук СССР, Серия Географическая номер 6, 1952. Михаил Иванович Сумгин] {{ref-ru}}</ref>. Эрзя<ref>[http://lukped.narod.ru/internet/science/symgin.htm Знаменитые лукояновцы: Сумгин Михаил Иванович] {{ref-ru}}</ref>.
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Алоошонь ёнксонь велеть|А]]
