*Empty MediaWiki Message*

--- a/Кеченьбуе_(Орданьбуе).mw
+++ b/Кеченьбуе_(Орданьбуе).mw
@@ -59,7 +59,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Кеченьбие (смустьтне)}}
-'''Кеченьбуе''', лиякс кортыть: '''Кеченьбие<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Кечушево}}) — те эрзянь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/a_Kechyshevo.htm Многоликая Мордовия: Село Кечушево] {{Ref-ru}}</ref> веле [[Орданьбуе]]сэ [[Мордовия Республикась|Мордовия Республикасо]].
+'''Кеченьбуе''', лиякс кортыть: '''Кеченьбие<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Кечушево}}) — те эрзянь<ref name="РГО_с. Кечушево">[http://geo13.ru/reestr/object/203 Геопортал РГО в Республике Мордовия: с. Кечушево] {{Ref-ru}}</ref> веле [[Орданьбуе]]сэ [[Мордовия Республикась|Мордовия Республикасо]].
 
 Ашти [[Ратор лей|Ратор леень]] сянглей<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Симбирской губернии}}) ([[1863 ие]]) ''Кечушево  — 105<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Ордань уездсэ''. 
 
@@ -67,7 +67,7 @@
 Лемесь–антропоним, саеви эрзянь кезерень: '''Кечуш'''<ref name="Память, запечатленная в слове"/> лемстэнть.
 
 ==Содавикс ломанть те велестэнть==
-* [[Тремасов, Николай Фёдорович|Н. Ф. Тремасов]] — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
+* [[Тремасов, Николай Фёдорович|Н. Ф. Тремасов]]<ref name="МРОКМ им. И.Д. Воронина_Как на поле боя">[http://www.mrkm.ru/news/?id=430  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Как на поле боя: к 90-летию со дня рождения Героя Социалистического Труда Николая Федоровича Тремасова] {{ref-ru}}</ref> — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
 * [[Миронов, Тихон Петрович|Т.П. Миронов]] — келень-содый
 
 == Сёрм.: ==
