*Empty MediaWiki Message*

--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -29,7 +29,7 @@
 Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> (рузокс Малые Кармалы),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, те ёжомарямось ванстови мейле эрямонзо перть.
 1872-це иестэ Макаронь максызь тонавтнеме Шераутонь ушодкс школас, Цярмунонть эйстэ сисем вайгельпеть. Тонавтнесь вадрясто. Вана кодамо питне марто прядызе цёрынесь те школанть. Чуважтнэнь коест коряс Макаронь фамилиянзо сёрмадызь тетянзо лемсэ. Истя Макар Кобаев теевсь Евсевьевекс.
 
-1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо рузокс, татарокс, чуважокс. Содась лия кельтькак.
+1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо [[рузонь кель|рузокс]], [[печкасонь кель|татарокс]], [[ветькень кель|чуважокс]]. Содась лия кельтькак.
 
 Семинариясо тонавтнемстэ уш кармась Макар Евсевьевич фольклоронь пурнамо, седе мейле, зярдо сон важодсь тонавтыцякс, кизэнь каникуласто саиль мартонзо фотоаппарат ды туиль эрзянь ды мокшонь велетнева якамо. Книжказонзо сёрмадылинзе чуросто вастневиця валтнэнь, сёрмадсь морот, ёвкст, урнемат, лайшемат. Пурнась кезэрень викшнезь панарт, пулайть, пангот, руцят, карсемапельть.
 
@@ -48,10 +48,10 @@
 Васняяк сон ушодсь домкасто тонавтнеме эрзянь келенть. Лиснесь истя: эрьва велесэ кортыть эсест койсэ, лиясто мик эрзятне вейкест-вейкест аволь допрок чарькодсть.
 Макар Евсевьевич лездась А.Ф. Юртовнень « Образцы мордовской народной словесности. Песни на эрзянском и некоторые на мокшанском наречии» (1882) ды «Образцы мордовской народной словесности. Сказки и загадки на эрзянском наречии мордовского языка с русским переводом» (1883) книгатнень анокстамосо ды нолдамосо. А уш «Образецтнэнь…» - мокшонь морот - педе-пес пурнынзе сонсь. Сынь лиссть 1896-це иестэ.
 
-Макар Евсевьевич анокстась ды нолдась эрзянь ды мокшонь кельтнесэ букварть (1892, 1897). Топавтозь сынь рузонь графиканть лангс нежедезь. Зярыя уроконь ютазь, авторось максы рузонь валт, максы сынст ютавтомаст тиринь кельс. Истя мельсэ кирдевить 200 ламо рузонь валт; букваренть омбоце пельксэзэ – рузонь. Тесэ максовить рузонь алфавитэсь, лотксема тешкстнэ, цифратне, стакасто ёвтавиця гайттне ды гайттнень сюлмавкстнэ… Букваресь сёрмадозь чарькодевиця кельсэ, эйзэнзэ совавтозь морот, ёвкст, валмеревкст, содамоёвкст.
+Макар Евсевьевич анокстась ды нолдась эрзянь ды мокшонь кельтнесэ букварть<ref name="МРОКМ им. И.Д. Воронина_Буквари М.Е. Евсевьева">[http://www.mrkm.ru/news/?id=422  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Буквари М.Е. Евсевьева] {{ref-ru}}</ref> ([[1892]], [[1897]]). Топавтозь сынь рузонь графиканть лангс нежедезь. Зярыя уроконь ютазь, авторось максы рузонь валт, максы сынст ютавтомаст тиринь кельс. Истя мельсэ кирдевить 200 ламо рузонь валт; букваренть омбоце пельксэзэ – рузонь. Тесэ максовить рузонь алфавитэсь, лотксема тешкстнэ, цифратне, стакасто ёвтавиця гайттне ды гайттнень сюлмавкстнэ… Букваресь сёрмадозь чарькодевиця кельсэ, эйзэнзэ совавтозь морот, ёвкст, валмеревкст, содамоёвкст.
 Макар Евсевьевич ютавты эрзянь кельс «Рассказы о двунадесятых праздниках» ды «Крещение Руси при святом князе Владимире» (1889). 1910-це иестэ нолдызе «Евангелиянь» ютавксонть.
 
-1896-це иестэ Макар Евсевьевич васенцеде якась этнографиянь экспедицияс. Сон ульнесь Нижней Новгородонь, Пензань, Симбирень, Тамбовонь (ёнкстнесэ). Кода финнэнь стипендиат, пурнась келень, раськень шкинемань ды этнографиянь материал, кона совась Х. Паасоненнэнь 7-це ды 8-це томтнес.
+1896-це иестэ Макар Евсевьевич васенцеде якась этнографиянь экспедицияс. Сон ульнесь [[Алоошонь ёнкс|Нижней Новгородонь]], [[Пенза ёнкс|Пензань]], [[Ульянонь ёнкс|Симбирень]], [[Томбамонь ёнкс|Тамбовонь]] ёнкстнесэ. Кода [[суомить|финнэнь]] стипендиат, пурнась келень, раськень шкинемань ды этнографиянь материал, кона совась [[Паасонен Хейкки|Х. Паасоненнэнь]] 7-це ды 8-це томтнес.
 
 [[File:Bust Makar Evsevjev.JPG|thumb|350px|left|Макар Евсевьевэнь кеврунгозо [[Мордовиянь государственной педагогической институт М. Е. Евсевьевэнь лемсэ]], [[Саран ош]]со]]
 Эсь эрямонь малав ведьгемень иетнень Макар Евсевьев алтынзе фольклоронь пурнамонь пек эрявикс тевентень ды тень пингстэ сехте покш мель явась свадьбантень. Те домка мелесь чачсь Евсевьевень превс-седейс, нать, сестэ, зярдо сон прядызеть Казанень инородческой семинариянть - 1883-це иестэ, ды седе тов ушодызе фольклоронь пурнамонть. Эрзянь свадьбась неявсь сонензэ прок покш коекс, конасонть кеместэ сюлмавовсь эрзянь раськенть историянзо, эрямонзо ды культуразо<ref name="ГТРК «Мордовия»">[http://mordoviatv.ru/m-e-evseveven-erzyan-svadba-knigan-yubileenten-k-yubileyu-knigi-erzyanskaya-svadba-m-e-evseveva-erzya/ ФГУП ГТРК «Мордовия» М.Е.Евсевьевень «Эрзянь свадьба» книгань юбилеентень. ]{{ref-myv}}</ref>.
@@ -64,7 +64,8 @@
 1912-це иестэ М.Е. Евсевьевень кочкизь Рузонь географиянь обществань членэкс - сотрудникекс. Кавто иень ютазь сонзэ совавтызь Казанень университетэнь археологиянь, историянь ды этнографиянь вейсэндявксос. Учёноенть сёрмадовксонзо лиснесть Россиянь покш ковставкстнэсэ-журналтнэсэ, кулялопатнесэ. Сынь тешкстазельть Рузонь географиянь вейксэндявксонь сырнень медальсэ. Истя «онкстазельть» этнографиянь материалтнэ, конат кучнокшнозельть этнографиянь отделенияв.
 Куроксто сон кундась фольклоронь ды этнографиянь, эрзятнень эрямодост материалонь пурнамонь тевентень. Тейнесь эрямосто саезь ламо-ламо снимкат. Сехте вечкевикстнэнь кучинзе Парижень раськеютконь выставкав. Те важодевксэнть кисэ сонензэ макссть сырнень медаль.
 
-1919–це иестэ саезь 1929–це иес сон важоди Татариянь центральной музейсэ. Теде башка ловны лекцият эрзянь кельденть, этнографиядо, историядо Казанень Чилисема ёнксонь-педагогиянь ды Коммунизмань университетсэ. Теке шкастонть сонзэ лезксэнзэ вельде панжовить: васенце мордовской учительской семинария – Мачкасс велесэ (Саратовонь губерния, 1918), тонавтыцянь семинария – В. Толкан велесэ (Самарань губерния), Педагогикань курсат – Московсо, косо ютасть «переподготовка» эрзянь ды мокшонь тонавтыцятне. Курстнэнь прявтокс ды пурныцякс ульнесь Ф.Ф. Советкин.
+1919–це иестэ саезь 1929–це иес сон важоди Татариянь центральной музейсэ. Теде башка ловны лекцият [[эрзянь кель]]денть, этнографиядо, историядо Казанень Чилисема ёнксонь-педагогиянь ды Коммунизмань университетсэ. Теке шкастонть сонзэ лезксэнзэ вельде панжовить: васенце мордовской учительской семинария – Мачкасс велесэ (Саратовонь губерния, [[1918]]), тонавтыцянь семинария – В. Толкан велесэ (Самарань губерния), Педагогикань курсат – [[Москов]]со, косо ютасть «переподготовка» эрзянь ды мокшонь тонавтыцятне. Курстнэнь прявтокс ды пурныцякс ульнесь Ф.Ф. Советкин.
+
 Комсеце пингень комсеце иетнестэ Макар Евсевьевич ульнесь профессорокс, анокстась тонавтыцят, кепедсь Рав чирень раськетнень содамочист, культураст. Сон ламо важодсь мокшонь ды эрзянь культурань-содамочинь вейсэндявксонь прявтокс. 1924-це иестэ Макар Евсевьевич ульнесь эрзянь ды мокшонь тонавтыцянь Весероссиянь васенце Промксонь делегатокс, косо ульнесь ветицякс. 
 
 == Шкинемазо == 
@@ -77,15 +78,18 @@
 * «Эрзянь-рузонь валкс» (Москов, 1931) 
 * «Мордовская свадьба» (Москов, 1931)
 
-«Основы грамматики мордовского языка» лиссь 1929-це, омбоцеде 1931-це иестэ. Эйсэнзэ васенцекс невтинзе чачома кельтнень потмочинь лувост. «Основы…» важодевксэнть нолдамодо икеле Макар Евсевьевич ульнесь 450-де ламо эрзянь ды мокшонь велесэ. Сон аволь ансяк пурнась «живые образцы народной речи» - морот, урнемат, ёвкст, ёвтнемат, валт, валмеревкст, валонь формат, лиякс меремс, Раськень се таштавксонь уликсчинть, конань лемезэ кортамо, кель; сон текекс сравтсь валдочи, макссь содамочить. Сон ламо вий, мельть-арсемат путсь сенень, кодат кортавкст эрявить аравтомс юрокс, конатнень перька улезст пурназь-теезь эрзянь ды мокшонь литературань кельтне. Те важодеманть питнезэ а онкставишка – сон путынзе эрзянь ды мокшонь келень лувтненень юртнэнь, тейсь ушодкс сынст орфографиянтень. Финнэнь-угрань содавикс учёноесь Д.В. Бубрих сёрмадсь: «Основы мордовской грамматики» М.Е Евсевьева представляют собой явление чрезвычайно отрадное: они являются ярким свидетельством начавшегося национального возрождения мордвы…»
-«Эрзянь-рузонь валксось» лиссь 1931-це иестэ Московсо. Печатьстэ лисемантень лездасть Д.В. Бубрих ды Ф.Ф. Советкин. Те валксось ушодызе эрзянь валташтавксонть (лексиканть) системань коряс ванноманзо. Валксось теезь ансяк «к» букванть видьс, теке марто эрзянь диалектологиясо сон саи эрявикс тарка. Сонзэ эйс пурназь 2500 валт ды валсюлмавкст эрзянь ламо кортавкстнэстэ. Тешкстазь, кона валось кодамо велесэ, вариантсо ды смустьсэ вастневи. Те вастневемась кемекстави валмеревкссэ, валъёвтавкссо, моросто саевкссэ.
+«Основы грамматики мордовского языка» лиссь 1929-це, омбоцеде 1931-це иестэ. Эйсэнзэ васенцекс невтинзе чачома кельтнень потмочинь лувост. «Основы…» важодевксэнть нолдамодо икеле Макар Евсевьевич ульнесь 450-де ламо эрзянь ды мокшонь велесэ. Сон аволь ансяк пурнась «живые образцы народной речи» - [[моро]]т, [[урнема]]т, [[ёвкс]]т, [[ёвтнема]]т, валт, валмеревкст, валонь формат, лиякс меремс, раськень се таштавксонь уликсчинть, конань лемезэ «кортамо кель»; сон текекс сравтсь валдочи, макссь содамочить. Сон ламо вий, мельть-арсемат путсь сенень, кодат кортавкст эрявить аравтомс юрокс, конатнень перька улезст пурназь-теезь эрзянь ды мокшонь литературань кельтне. Те важодеманть питнезэ а онкставишка – сон путынзе эрзянь ды мокшонь келень лувтненень юртнэнь, тейсь ушодкс сынст орфографиянтень. Финнэнь-угрань содавикс учёноесь Д.В. Бубрих сёрмадсь: 
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''М.Е Евсевьевень «Основы мордовской грамматики» те невти раськень кепедстеманть.''}}
+{{oq|ru|«Основы мордовской грамматики» М.Е Евсевьева представляют собой явление чрезвычайно отрадное: они являются ярким свидетельством начавшегося национального возрождения мордвы…»}}
+{{Цитатань пе}}
 
-Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со. 
-140-иень М.Е. Евсевьевень чачома чистензэ, 2004-це иестэ, челькезе ульнесь калмазь [[Саранск]]ойсэ<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=0 Библиотека Мордовской Литературы: Евсевьев Макар Евсевьевич]{{ref-ru}}</ref>, С. Эрьзя скульпторонть, И. Яушев морыцянть, Л. Кирюков композиторонть ваксс. Сюконямо тень кисэ [[Эрзянь келень идема Фонд]]онтень. 
+«Эрзянь-рузонь валксось» лиссь [[1931 ие]]стэ Московсо. Печатьстэ лисемантень лездасть Д.В. Бубрих ды Ф.Ф. Советкин. Те валксось ушодызе эрзянь валташтавксонть (лексиканть) системань коряс ванноманзо. Валксось теезь ансяк «к» букванть видьс, теке марто эрзянь диалектологиясо сон саи эрявикс тарка. Сонзэ эйс пурназь 2500 валт ды валсюлмавкст эрзянь ламо кортавкстнэстэ. Тешкстазь, кона валось кодамо велестэ, вариантсо ды смустьсэ вастневи. Те вастневемась кемекстави [[валмеревкс]]сэ, [[валъёвтавкс]]со, [[моро]]сто саевкссэ.
 
-Кулось Макар Евсевьевич 1931-це иестэ панжиковонь 10-це чистэ. Калмазель Казаньсэ. 2004-це иестэ, чачома чистэнзэ 140 иетнень тешкстамсто, уловозо ускозь (сюконямо эрзянь келень идема Фондонтень) Саранов, калмазь [[Степан Эрьзя|С. Эрьзя]] скульпторонть, И. Яушев морыцянть, Л. Кирюков композиторонть ваксс. Сонзэ лемезэ максозь Мордовиянь пединститутонтень. Тесэ сонзэ лемс панжозь музей. 1964-це иестэ саезь ютавтовить Евсевьевень лементень алтазь ловномат. Сарансо лемсэнзэ ули ульця, библиотека, Саранонь монументально-скульптурань комплекссэ – бюстозо, республикань краеведень музейсэ – фотографият, кедьчелькензэ, кедьёнксонзо.
+Кулось Макар Евсеевич [[1931]] иень [[панжиковонь 10 чи]]стэ, калмазель [[Казань ош]]со.140-иень М.Е. Евсевьевень чачома чистензэ, 2004-це иестэ, челькезе ульнесь калмазь [[Саранск]]ойсэ<ref name="Библиотека Мо">[http://www.lib.e-mordovia.ru/Library/?Char=%C5&id=0 Библиотека Мордовской Литературы: Евсевьев Макар Евсевьевич]{{ref-ru}}</ref>, С. Эрьзя скульпторонть, И. Яушев морыцянть, Л. Кирюков композиторонть ваксс. Сюконямо тень кисэ [[Эрзянь келень идема Фонд]]онтень. 
 
-1961-1966-це иестэ лиссть 5 томсо «Избранные труды М.Е. Евсевьева», 1959-це иестэ - «Мордовская свадьба». 2004-це иестэ нолдазель «М.Е. Евсевьев: жизнь мордвы в фотографиях» альбомось. Неень Покшчинтень одс нолдазь «Мордовская свадьба», нолдазь мазыйстэ, артовкс марто.
+Сонзэ лемезэ максозь Мордовиянь пединститутонтень. Тесэ сонзэ лемс панжозь музей. [[1964 ие]]стэ саезь ютавтовить Евсевьевень лементень алтазь ловномат. Сарансо лемсэнзэ ули куро, ловномакудо, Саранонь монументально-скульптурань комплекссэ – бюстозо, республикань краеведень музейсэ – фотокувт, кедьчелькензэ, кедьёнксонзо.
+
+1961-1966-це иетнестэ лиссть 5 томсо «Избранные труды М.Е. Евсевьева», 1959-це иестэ - «Мордовская свадьба». 2004 иестэ нолдазель «М.Е. Евсевьев: жизнь мордвы в фотографиях» альбомось. Неень Покшчинтень одс нолдазь «Мордовская свадьба», нолдазь мазыйстэ, артовкс марто.
 
 
 == Фотокувт== 
