--- a/Иса_Веле_(Инесаро_буе).mw
+++ b/Иса_Веле_(Инесаро_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 202<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 202<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -61,7 +61,12 @@
 
 '''Иса Веле''' ({{Lang-ru|с. Новые Верхиссы}})   — мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/i_Novie_Verhissi.htm Многоликая Мордовия: Село Новые Верхиссы] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+== Содавикс ломанть те велестэнть ==
+Иса Велесэ чачсь:
+* [[Меркушкин, Григорий Яковлевич|Григорий Меркушкин]]<ref name="МРОКМ им. И.Д. Воронина_Григорий Яковлевич Меркушкин">[http://www.mrkm.ru/news/?id=455  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Григорий Яковлевич Меркушкин] {{ref-ru}}</ref>—  мокшонь историк, драматург, тонавтыця, партиянь важодиця.
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
