--- a/Ускляй_(Оразайбуе).mw
+++ b/Ускляй_(Оразайбуе).mw
@@ -40,7 +40,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 33<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 33<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -67,7 +67,7 @@
 {{oq|ru|В «СНМ Пензенской губернии» (1869) – Ускляй (Спасское), село из 102 дворов  Инсарского уезда. }}
 {{Цитатань пе}}
 
-Эрицятнеде: [[2002 ие]]стэ ульнесь 36 лом., 2010 иень ловномасонть - 33 лом.  
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 36 лом., 2010 иень ловномасонть - 33 лом.  
 
 == Веленть лемденть  ==
 Лемесь-гидроним<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. 
