--- a/Пермезь_веле_(Покш_Килейбуе).mw
+++ b/Пермезь_веле_(Покш_Килейбуе).mw
@@ -68,7 +68,7 @@
 
 ==Содавикс ломанть те велестэнть==
 Пермезь велесэ чачсть:
-* [[Лемайкин, Иван Самсонович|Иван Лемайкин]] — Советэнь Союзонь Мараля 
+* [[Лемайкин, Иван Самсонович|Иван Лемайкин]]<ref name="МРОКМ им. И.Д. Воронина_Герой Днепра">[http://www.mrkm.ru/news/?id=412  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Днепра] {{ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 * М.С. Ошкин — Георгиень кавалер 
 * В. Исляйкин — Московонь театрань опереттанть  морыця
 * А.Я. Дурнайкин — экономикань наукань кандидат
