*Empty MediaWiki Message*

--- a/Лемайкин,_Иван_Самсонович.mw
+++ b/Лемайкин,_Иван_Самсонович.mw
@@ -27,9 +27,9 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Лемайкин Иван Самсонович''' ([[1922 ие]]нь [[сундерьковонь 16 чи]]стэ [[Пермезь веле (Покш Килейбуень)|Пермезь велесэ]], [[Покш Килейбуе]]нь, [[Мордовия Республикась|Мордовия Республикасо]] —  [[1992 ие]] [[умарьковонь 2 чи]]стэ [[Пермезь веле (Покш Килейбуень)|Пермезь велесэ]]) — капитан Важодицянь сокиця-видицянь Якстере Армиянь.  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) (1943 ие).
+'''Лемайкин Иван Самсонович''' ([[1922 ие]]нь [[сундерьковонь 16 чи]]стэ [[Пермезь веле (Покш Килейбуень)|Пермезь велесэ]], [[Покш Килейбуе]]нь, [[Мордовия Республикась|Мордовия Республикасо]] —  [[1992 ие]] [[умарьковонь 2 чи]]стэ [[Пермезь веле (Покш Килейбуень)|Пермезь велесэ]]<ref name="МРОКМ им. И.Д. Воронина_Герой Днепра">[http://www.mrkm.ru/news/?id=412  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Герой Днепра] {{ref-ru}}</ref>) — капитан Важодицянь сокиця-видицянь Якстере Армиянь.  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) (1943 ие).
 
-Ушодксонь школанть прядомадо мейле важодсь вейсхозсо. 1941 иестэ медьковсто ульнесь тердезь службас Важодицянь сокиця-видицянь Якстере Армияв. 1943 иень эйзюрковсто - ванстниця (разведчик) 120-це ледницянь полконть  69-це ледницянь дивизиянть 65-це армиянть Куншка фронтонть. Прянзо невтизе Днепра леенть тюреманть шкасто [[1943 ие]]стэ [[ожоковонь 15 чи]]стэ.
+Ушодксонь школанть прядомадо мейле важодсь вейсхозсо. 1941 иестэ медьковсто ульнесь тердезь службас Важодицянь сокиця-видицянь Якстере Армияв. 1943 иень эйзюрковсто - Иван Лемайкин ванстниця (разведчик) 120-це ледницянь полконть  69-це ледницянь дивизиянть 65-це армиянть Куншка фронтонть<ref name="МРОКМ им. И.Д. Воронина_Герой Днепра"/>. Прянзо невтизе Днепра леенть тюреманть шкасто [[1943 ие]]стэ [[ожоковонь 15 чи]]стэ.
 
 ==Казнеть ==
 Ульнесь казнезь Ленинэнь орденсэ (30.10.43) ды Советэнь Союзонь Мараля лемсэ, «Сырнень Теште» медальсэ  (номерэзэ 1611). Отечественной ойнань 1-це степенень орденсэ ды лия медальтнесэ<ref>[http://www.warheroes.ru/hero/hero.asp?Hero_id=8087 Лемайкин Иван Самсонович Герои Страны {{ref-ru}}]</ref>.
