--- a/Ташто_Мурза_(Кочкурбуе).mw
+++ b/Ташто_Мурза_(Кочкурбуе).mw
@@ -69,7 +69,7 @@
 Ташто Мурзасо чачсть:
 * [[Полежайкин, Сергей Иванович|С.И. Полежайкин]]<ref>[http://kochscool.edurm.ru/p91aa1.html Макаров Петр Антонович {{Ref-ru}}]]</ref> — [[Советэнь Союзонь Мараля]] (1945 ие) ({{Lang-ru|Герой Советского Союза}})
 * Г. С. Старкин — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
-* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?page=126  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця 
+* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?id=408  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця 
 * А.С. Гришин — партизан, Ине Ойнань улиця 
 * Л.П. Сенотов — тонавтыця 
 * В.Д. Объедкин — келень-содый 
@@ -77,7 +77,7 @@
 * В.С. Батмазова — Мордовиянь культурань заслуженной важодиця 
 * В.В. Нестеров — МАССР-нь рационализатор
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|Т]]
