--- a/Ташто_Пурня_(Кочкурбуе).mw
+++ b/Ташто_Пурня_(Кочкурбуе).mw
@@ -67,7 +67,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Ташто Пурнясо чачсть:
-* [[Макаров, Пётр Антонович|П.А. Макаров]]<ref>[http://kochscool.edurm.ru/p91aa1.html Макаров Петр Антонович {{Ref-ru}}]]</ref> —  ({{Lang-ru|полный кавалер ордена Славы}})
+* [[Макаров, Петр Антонович|Петр Макаров]]<ref name="МОУ «Кочкуровская СООЩ»_ Макаров Петр Антонович">[http://kochscool.edurm.ru/p91aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Макаров Петр Антонович {{Ref-ru}}]]</ref> — Ине Ойнань улиця, ({{Lang-ru|полный кавалер, награждённый четырьмя орденами Славы, один из 29}}) 
 * И.В. Ревакшин — тонавтыця
 
 == Сёрм.: ==
