*Empty MediaWiki Message*

--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -68,7 +68,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Симилейсэ чачсть:
-* К.И. Рассказов —Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+* [[Рассказов, Константин Иванович|Константин Рассказов]]<ref name="МОУ «Кочкуровская СООЩ»_ Рассказов Константин Иванович">[http://kochscool.edurm.ru/p93aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Рассказов Константин Иванович]{{Ref-ru}}</ref> — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 * Я.З. Наумкин — механизатор
 * А.П. Гребнева, Л.М. Тюрина — тонавтыцят
 * [[Эскин, Анатолий Устинович|А.У. Эскин]]<ref name="Библиотека_Эскин">[http://www.lib.e-mordovia.ru/Library/?Char=%DD&id=3 Библиотека мордовской литературы. Эскин Анатолий Устинович]{{ref-ru}}</ref><ref name="ГБУ РК_Эскин ">[http://www.nbrkomi.ru/page/2929/  ГБУ РК «Национальная библиотека Республики Коми». Эскин Анатолий Устинович]{{ref-ru}}</ref> — [[эрзя]]нь валморонь ладсий
