--- a/Кочкур_веле_(Кочкурбуе).mw
+++ b/Кочкур_веле_(Кочкурбуе).mw
@@ -71,9 +71,9 @@
 == Содавикс ломанть те велестэнть ==
 Кочкур велесэ чачсть:
 * [[Агейкин, Григорий Петрович|Г. П. Агейкин]]<ref name="Чилисема">[http://chilisema.ru/upload/iblock/b7b/5-15-ilovepdf-compressed.pdf  «Чилисема» ￼2015ие  №5, АГЕЙКИН Григорий Петрович] {{Ref-myv}}</ref> —  эрзянь сёрмадей ды валморозей
-*  [[Дедаев, Николай Алексеевич|Николай Дедаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор. 
+*  [[Дедаев, Николай Алексеевич|Николай Дедаев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — генерал-майор
 * К.Е. Готина  — тонавтыця
-* К.С. Шубников —  ({{Lang-ru| полный кавалер ордена Славы}}) 
+* [[Шубников, Кирилл Степанович|Кирилл Шубников]]<ref name="МОУ «Кочкуровская СООЩ»_ Шубников Кирилл Степанович">[http://kochscool.edurm.ru/p94aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Шубников Кирилл Степанович]{{Ref-ru}}</ref> —  ({{Lang-ru| полный кавалер ордена Славы}}) 
 * А.Ф. Занькин — ({{Lang-ru|1-ый заместитель Председателя Государственного Собрания РМ}}) 
 * Н.А. Агафонова, Б.Е. Родин, В.М. Сурков<ref>Время и события. 2010: библиогр. указ. / Нац. б-ка им. А.С. Пушкина Респ. Мордовия; [сост. А.Н. Маланьчева]. – Саранск, 2011. – 180 с.</ref>, В. И. Чиндяскин — учёнойть 
 
