--- a/Ташто_Мурза_(Кочкурбуе).mw
+++ b/Ташто_Мурза_(Кочкурбуе).mw
@@ -40,7 +40,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  545<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               =  545<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -67,16 +67,15 @@
 
 == Содавикс ломанть те велестэнть ==
 Ташто Мурзасо чачсть:
-* [[Полежайкин, Сергей Иванович|С.И. Полежайкин]]<ref>[http://kochscool.edurm.ru/p91aa1.html Макаров Петр Антонович {{Ref-ru}}]]</ref> — [[Советэнь Союзонь Мараля]] (1945 ие) ({{Lang-ru|Герой Советского Союза}})
-* Г. С. Старкин — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
-* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?id=408  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця 
-* А.С. Гришин — партизан, Ине Ойнань улиця 
-* Л.П. Сенотов — тонавтыця 
-* В.Д. Объедкин — келень-содый 
-* Н.Ф. Кабанов — шождаатлет 
 * В.С. Батмазова — Мордовиянь культурань заслуженной важодиця 
+* А.С. Гришин — партизан, Ине Ойнань улиця 
+* Н.Ф. Кабанов — шождаатлет 
 * В.В. Нестеров — МАССР-нь рационализатор
-
+* В.Д. Объедкин — келень-содый 
+* [[Полежайкин, Сергей Иванович|Сергей Полежайкин]]<ref name="МОУ «Кочкуровская СООЩ»_ Полежайкин Сергей Иванович">[http://kochscool.edurm.ru/p92aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Полежайкин Сергей Иванович]{{Ref-ru}}</ref> — [[Советэнь Союзонь Мараля]] (1945 ие) ({{Lang-ru|Герой Советского Союза}})
+* Г. С. Старкин — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}})
+* Л.П. Сенотов — тонавтыця 
+* [[Сибиряк-Поздяев, Илларион Сергеевич|Илларион Сибиряк]]<ref name="МРОКМ им. И.Д. Воронина_Илларион Сергеевич Сибиряк-Поздяев">[http://www.mrkm.ru/news/?id=408  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Илларион Сергеевич Сибиряк-Поздяев (26.10. 1902 – 21.01.1984)] {{ref-ru}}</ref> — советэнь-партиянь важодиця, ученой-историк, фольклороньпурныця 
 == Лисьм.: ==
 <references />
 
