*Empty MediaWiki Message*

--- a/Полежайкин,_Сергей_Иванович.mw
+++ b/Полежайкин,_Сергей_Иванович.mw
@@ -24,7 +24,7 @@
 }}
 '''Полежайкин Сергей Иванович''' ([[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]] —  [[1944 ие]] [[ожоковонь 10 чи]]стэ [[Кретинг ош]]) — покш лейтенант Важодиця-Сокиця-Видиця Армиянть, Ине Ойнань улиця, Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}}) (1945 ие).
 
-Чачсь Сергей Полежайкин  [[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]] сокицянь-видицянь семиясо. Прядсь сисем класст ды тусь эрямо  ды важодеме Андижанонь ёнксов Узбекень ССР-сэ. Якстере Армиясо [[1940 ие]]стэ.  1943 иестэ прядызе Рязанень ушмонь-автонь тонавтнемасо ({{lang-ru|Рязанское военно-автомобильное училище}}). Панжиковсто — Ине Отечественной ойнасо улиця.
+Чачсь Сергей Полежайкин  [[1920 ие]]стэ [[таштамковонь 14 чи]] [[Ташто Мурза (Кочкурбуе)|Ташто Мурза велесэ]]<ref name="МОУ «Кочкуровская СООЩ»_ Полежайкин Сергей Иванович">[http://kochscool.edurm.ru/p92aa1.html МОУ «Кочкуровская средняя общеобразовательная школа».  Полежайкин Сергей Иванович]{{Ref-ru}}</ref> сокицянь-видицянь семиясо. Прядсь сисем класст ды тусь эрямо  ды важодеме Андижанонь ёнксов Узбекень ССР-сэ. Якстере Армиясо [[1940 ие]]стэ.  1943 иестэ прядызе Рязанень ушмонь-автонь тонавтнемасо ({{lang-ru|Рязанское военно-автомобильное училище}}). Панжиковсто — Ине Отечественной ойнасо улиця.
 
 1944 иень ожоковонтень покш лейтенантось Сергей Полежайкин ульнесь 1-це гвардиянь башка мотоциклетэнь полконть 5-це гвардиянь танконь ушмонь 1-це Балтваксонь турем киксэнь ванстницянь ушмоветиекс ({{lang-ru|офицером разведки 1-го гвардейского отдельного мотоциклетного полка 5-й гвардейской танковой армии 1-го Прибалтийского фронта}}).  
 
@@ -34,6 +34,7 @@
 
 == Сёрм.: ==
 * Герои Советского Союза: Краткий биографический словарь / Пред. ред. коллегии И. Н. Шкадов. — М.: Воениздат, 1988. — Т. 2 /Любов — Ящук/. — 863 с. — 100 000 экз. — ISBN 5-203-00536-2
+== Лисьм.: ==
 <references />
 
 [[Category:Эрзянь Ине ломанть]]
