*Empty MediaWiki Message*

--- a/Торбеева_(Торбейбуе).mw
+++ b/Торбеева_(Торбейбуе).mw
@@ -61,7 +61,8 @@
 '''Торбеева''' ({{Lang-ru|пгт. Торбеево}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
-== Сёрм.: ==
+* [[Девятаев, Михаил Петрович|Михаил Девятаев]]<ref name="МРОКМ им. И.Д. Воронина_Жизнь – легенда.">[http://www.mrkm.ru/news/?id=375  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Жизнь – легенда.] {{ref-ru}}</ref>—  Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
