*Empty MediaWiki Message*

--- a/Кочкурвеле_(Тумобуе).mw
+++ b/Кочкурвеле_(Тумобуе).mw
@@ -72,15 +72,13 @@
 * Н.А. Дедаев<ref>[http://patriotrm.clan.su/publ/oni_srazhalis_na_finskoj/1-1-0-296 Патриоты Мордовии. Они сражались на финской {{Ref-ru}}]</ref>— генерал-майор 
 * С.И. Дергачёв<ref>[http://erziapr.ru/index.php/2014-05-21-16-46-51/884-2012-04-11-05-51-25 Сынь славизь Мордовиянть]
  {{Ref-myv}}</ref>— тонавтыця,  кулянь-сёрмадей, МАССР-нь заслуженной тонавтыця, СССР-нь раськень тонавтыця, Ине Отечественной ойнань улиця.
+* [[Скобелев, Елисей Васильевич|Елисей Скобелев]]<ref name="МРОКМ им. И.Д. Воронина_К 125-летию">[http://www.mrkm.ru/news/?id=371  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К 125-летию со дня рождения Скобелева Елисея Васильевича.] {{ref-ru}}</ref> — тонавтыця, МАССР-нь заслуженной тонавтыця
 * Я.С. Слушкин<ref>[http://www.d-petrovka.edurm.ru/index.php/component/phocadownload/category/1-ofitsialnye-dokumenty?download=20:muzejnaya-pedagogika-shkoly-v-stanovlenii-grazhdanstvennosti-uchashchikhsya  МОУ «Кочкуровская средняя общеобразовательная школа» являлась республиканской экспериментальной площадкой, работающей по теме «Музейная педагогика школы в становлении гражданственности учащихся» ] {{Ref-ru}}</ref>— сёрмадей («Семья Кочкуровых» романось, ды ёвксонь пурнавкс «Сильные люди»)
 * [[Дергачёвонь Любовь|Л.Ф. Дергачёва]]<ref>[http://portal.do.mrsu.ru/community_events_people/people/?id=2306 Кто есть кто в финно-угорском мире: Любовь Федоровна Дергачева] {{Ref-ru}}</ref>— валморозей
 * Виктор Александрович Дырин— артыця-тонавтыця
 * [[Дырин, Юрий Александрович|В.Ю. Дырин]]<ref>[http://arts.in.ua/artists/Durin/ Arts.In.UA Дырин Юрий Александрович ] {{Ref-ru}}</ref>— артыця, этнофутуролог
-
 == Веленть эрямозо  ==
-
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
